test: add tests to configurations