@@ -21,6 +21,8 @@ dependencies {
     // Tests
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
+    testImplementation 'org.junit-pioneer:junit-pioneer:2.2.0'
 }
 
 test {
@@ -29,6 +31,7 @@ test {
         events 'passed', 'skipped', 'failed'
         exceptionFormat = 'full'
     }
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
 }
 
 spotless {
